--- a/git/.terraformrc
+++ b/git/.terraformrc
@@ -1,9 +1,6 @@
 provider_installation {
   filesystem_mirror {
     path    = "/usr/share/terraform/providers"
-    include = ["example.com/*/*"]
-  }
-  direct {
-    exclude = ["example.com/*/*"]
+    include = ["registry.terraform.io/*/*"]
   }
 }
